--- a/assets/css/require.css
+++ b/assets/css/require.css
@@ -251,7 +251,7 @@ body.loaded { overflow: visible; }
 .img-cover {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: scale-down;
 }
 
 .has-bg-image {
@@ -450,7 +450,7 @@ body.loaded { overflow: visible; }
    * REUSED STYLE
    */
 
-  .section { --section-padding: 50px; }
+  .section { --section-padding: 100px; }
 
   .section-title { margin-block-end: 40px; }
 
@@ -498,7 +498,7 @@ body.loaded { overflow: visible; }
    * REUSED STYLE
    */
 
-  .section-title { margin-block-end: 60px; }
+  .section-title { margin-block-end: 30px; }
 
 
 
